Microcosm/Root/src/ec3/Pluribus/Compiler/y.output
Terminals unused in grammar

    FILL
    ROLE


Grammar

    0 $accept: pluribusModule $end

    1 pluribusModule: ':' EXPORT unitDef
    2               | ':'

    3 unitDef: UNIT defSymbol '{' unitElems '}'

    4 unitUse: UNIT scopedRef ';'
    5        | EXPORT UNIT scopedRef ';'
    6        | ELEVATE UNIT scopedRef ';'
    7        | UNIT '{' unitElems '}'
    8        | EXPORT UNIT '{' unitElems '}'

    9 unitElems: unitElemList
   10          | ε

   11 unitElemList: unitElem
   12             | unitElemList unitElem

   13 unitElem: definitionStatement
   14         | EXPORT definitionStatement
   15         | codeAtt
   16         | importAtt
   17         | packageAtt
   18         | unitUse
   19         | unumImplUse

   20 definitionStatement: attributeDef
   21                    | ingredientImplDef
   22                    | kindDef
   23                    | presenceImplDef
   24                    | presenceStructureDef
   25                    | publishDef
   26                    | remoteDef
   27                    | typeDef
   28                    | unitDef
   29                    | unumImplDef
   30                    | unumStructureDef

   31 attributeType: booleanType
   32              | charType
   33              | LONG
   34              | stringType

   35 attributeDef: ATTRIBUTE defSymbol attributeType ';'
   36             | ATTRIBUTE defSymbol ';'

   37 assignment: scopedRef '=' expr ';'
   38           | scopedRef ';'
   39           | unitUse

   40 requireAtt: REQUIRE expr ';'

   41 codeAtt: codeModifiers codeType defSymbol codeInherits methodCode

   42 codeInherit: EXTENDS mangledSymbolList
   43            | IMPLEMENTS mangledSymbolList

   44 codeInheritList: codeInherit
   45                | codeInheritList codeInherit

   46 codeInherits: codeInheritList
   47             | ε

   48 codeModifier: ABSTRACT
   49             | FINAL
   50             | PUBLIC

   51 codeModifierList: codeModifier
   52                 | codeModifierList codeModifier

   53 codeModifiers: codeModifierList
   54              | ε

   55 codeType: CLASS
   56         | INTERFACE
   57         | ECLASS
   58         | EINTERFACE

   59 mangledSymbolElem: Symbol
   60                  | KIND Symbol

   61 mangledSymbolList: mangledSymbolElem
   62                  | mangledSymbolList ',' mangledSymbolElem

   63 prototypeDecl: Symbol '(' parameterDeclList ')' throwsList ';'
   64              | Symbol '(' ')' throwsList ';'
   65              | INIT '(' parameterDeclList ')' throwsList ';'
   66              | INIT '(' ')' throwsList ';'

   67 parameterDeclList: parameterDecl
   68                  | parameterDeclList ',' parameterDecl

   69 arrayMarker: '[' ']'

   70 arrayMarkers: arrayMarker
   71             | arrayMarkers arrayMarker

   72 parameterDecl: type arrayMarkers Symbol
   73              | type Symbol arrayMarkers
   74              | type Symbol
   75              | type

   76 kindDef: KIND defSymbol '{' kindElems '}'

   77 commaNameList: Symbol
   78              | commaNameList ',' Symbol

   79 commaScopedRefList: scopedRef
   80                   | commaScopedRefList ',' scopedRef

   81 kindUse: KIND scopedRef ';'
   82        | KIND '{' kindElems '}'

   83 kindUseNoSemi: KIND scopedRef
   84              | KIND '{' kindElems '}'

   85 kindElems: kindElemList
   86          | ε

   87 kindElemList: kindElem
   88             | kindElemList kindElem

   89 kindElem: prototypeDecl
   90         | requireAtt
   91         | kindUse
   92         | implementsAtt

   93 ingredientImplDef: INGREDIENT IMPL defSymbol '{' ingredientImplElems '}'

   94 ingredientImplUse: IMPL scopedRef ';'
   95                  | IMPL '{' ingredientImplElems '}'

   96 ingredientImplElems: ingredientImplElemList
   97                    | ε

   98 ingredientImplElemList: ingredientImplElem
   99                       | ingredientImplElemList ingredientImplElem

  100 ingredientImplElem: assignment
  101                   | kindUse
  102                   | neighborAtt
  103                   | stateBundleAtt
  104                   | variableDecl
  105                   | functionAtt
  106                   | methodAtt
  107                   | initBlockAtt
  108                   | dataAtt
  109                   | importAtt
  110                   | implementsAtt

  111 neighborAtt: NEIGHBOR INGREDIENT Symbol kindUse
  112            | NEIGHBOR PRESENCE Symbol plurality kindUse

  113 stateBundleAtt: STATE scopedRef Symbol valueOrNot ';'

  114 $@1: ε

  115 valueOrNot: '=' $@1 Initialization
  116           | ε

  117 variableDecl: modifiers type Symbol arrayMarkers valueOrNot ';'
  118             | modifiers type arrayMarkers Symbol valueOrNot ';'
  119             | modifiers type Symbol valueOrNot ';'
  120             | type Symbol arrayMarkers valueOrNot ';'
  121             | type arrayMarkers Symbol valueOrNot ';'
  122             | type Symbol valueOrNot ';'

  123 throwsList: THROWS commaScopedRefList
  124           | ε

  125 functionAtt: FUNCTION modifiersOrNot type Symbol '(' parameterDeclList ')' throwsList methodCode
  126            | FUNCTION modifiersOrNot type Symbol '(' ')' throwsList methodCode

  127 modifiersOrNot: modifierList
  128               | ε

  129 modifiers: modifierList

  130 modifierList: modifier
  131             | modifierList modifier

  132 modifier: PUBLIC
  133         | PRIVATE
  134         | PROTECTED
  135         | STATIC
  136         | FINAL

  137 initBlockAtt: PRIME INIT '(' parameterDeclList ')' throwsList methodCode
  138             | PRIME INIT '(' ')' throwsList methodCode
  139             | FACET INIT '(' parameterDeclList ')' throwsList methodCode
  140             | FACET INIT '(' ')' throwsList methodCode
  141             | INIT '(' parameterDeclList ')' throwsList methodCode
  142             | INIT '(' ')' throwsList methodCode
  143             | INIT throwsList methodCode

  144 methodAtt: METHOD Symbol '(' parameterDeclList ')' throwsList methodCode
  145          | METHOD Symbol '(' ')' throwsList methodCode

  146 $@2: ε

  147 methodCode: '{' $@2 CodeBlock

  148 $@3: ε

  149 dataAtt: DATA '{' $@3 HexBlock
  150        | DATA String ';'

  151 packageAtt: PACKAGE scopedRef ';'

  152 importAtt: IMPORT scopedRef ';'
  153          | IMPORT scopedRef '.' '*' ';'

  154 implementsAtt: IMPLEMENTS scopedRef ';'

  155 presenceStructureDef: PRESENCE STRUCTURE defSymbol '{' presenceStructureElems '}'

  156 presenceStructureUse: STRUCTURE scopedRef ';'
  157                     | STRUCTURE '{' presenceStructureElems '}'

  158 presenceStructureElems: presenceStructureElemList
  159                       | ε

  160 presenceStructureElemList: presenceStructureElem
  161                          | presenceStructureElemList presenceStructureElem

  162 presenceStructureElem: assignment
  163                      | requireAtt
  164                      | kindUse
  165                      | ingredientAtt

  166 ingredientAtt: INGREDIENT Symbol '{' ingredientAttElems '}'

  167 ingredientAttElems: ingredientAttElemList
  168                   | ε

  169 ingredientAttElemList: ingredientAttElem
  170                      | ingredientAttElemList ingredientAttElem

  171 ingredientAttElem: kindUse
  172                  | deliverAtt

  173 deliverSym: Symbol
  174           | INIT

  175 deliverAtt: DELIVER scope deliverSym TO deliverSym ';'
  176           | DELIVER scope deliverSym ';'

  177 scope: PRESENCE
  178      | UNUM

  179 presenceImplDef: PRESENCE IMPL defSymbol '{' presenceImplElems '}'

  180 presenceImplUse: IMPL scopedRef ';'
  181                | IMPL '{' presenceImplElems '}'

  182 presenceImplElems: presenceImplElemList
  183                  | ε

  184 presenceImplElemList: presenceImplElem
  185                     | presenceImplElemList presenceImplElem

  186 presenceImplElem: assignment
  187                 | presenceBehavior
  188                 | initBlockAtt
  189                 | presenceStructureUse
  190                 | templateAtt
  191                 | makeAtt
  192                 | implementsAtt

  193 presenceBehavior: PRESENCEBEHAVIOR commaNameList ';'

  194 templateAtt: INGREDIENT commaNameList templateDef

  195 makeAtt: MAKE Symbol ';'
  196        | MAKE Symbol commaNameList ';'

  197 templateDef: TEMPLATE '{' templateElems '}'

  198 templateElems: templateElemList
  199              | ε

  200 templateElemList: templateElem
  201                 | templateElemList templateElem

  202 templateElem: ingredientImplUse
  203             | mapAtt

  204 mapScope: NEIGHBOR
  205         | STATE

  206 mapAtt: MAP mapScope Symbol TO PNULL ';'
  207       | MAP mapScope Symbol TO Symbol ';'
  208       | MAP mapScope Symbol ';'

  209 exprList: expr
  210         | exprList ',' expr

  211 unumStructureDef: UNUM STRUCTURE defSymbol '{' unumStructureElems '}'

  212 unumStructureUse: STRUCTURE scopedRef ';'
  213                 | STRUCTURE '{' unumStructureElems '}'

  214 unumStructureElems: unumStructureElemList
  215                   | ε

  216 unumStructureElemList: unumStructureElem
  217                      | unumStructureElemList unumStructureElem

  218 unumStructureElem: assignment
  219                  | requireAtt
  220                  | kindUse
  221                  | primeAtt
  222                  | presenceAtt

  223 primeAtt: PRIME Symbol ';'

  224 presenceAtt: PRESENCE Symbol kindUseNoSemi makes ';'
  225            | PRESENCE Symbol kindUseNoSemi MAKES '{' presenceConds '}'

  226 presenceConds: presenceCondList
  227              | ε

  228 presenceCondList: presenceCond
  229                 | presenceCondList presenceCond

  230 presenceCond: expr ':' Symbol ';'

  231 makes: MAKES Symbol
  232      | MAKES NONE
  233      | ε

  234 plurality: arrayMarker
  235          | ε

  236 unumImplDef: UNUM IMPL defSymbol '{' unumImplElems '}'

  237 unumImplUse: IMPL scopedRef ';'
  238            | IMPL '{' unumImplElems '}'

  239 unumImplElems: unumImplElemList
  240              | ε

  241 unumImplElemList: unumImplElem
  242                 | unumImplElemList unumImplElem

  243 unumImplElem: assignment
  244             | unumStructureUse
  245             | presenceImplAtt

  246 presenceImplAtt: PRESENCE commaNameList presenceImplUse

  247 expr: exprA
  248     | expr '?' expr ':' exprA

  249 exprA: expr9
  250      | exprA Or expr9

  251 expr9: expr8
  252      | expr9 And expr8

  253 expr8: expr7
  254      | expr8 '|' expr7

  255 expr7: expr6
  256      | expr7 '^' expr6

  257 expr6: expr5
  258      | expr6 '&' expr5

  259 expr5: expr4
  260      | expr5 Eq expr4
  261      | expr5 Neq expr4

  262 expr4: expr3
  263      | expr4 '<' expr3
  264      | expr4 Leq expr3
  265      | expr4 '>' expr3
  266      | expr4 Geq expr3

  267 expr3: expr2
  268      | expr3 Lsl expr2
  269      | expr3 Lsr expr2
  270      | expr3 Asr expr2

  271 expr2: expr1
  272      | expr2 '+' expr1
  273      | expr2 '-' expr1

  274 expr1: term
  275      | expr1 '*' term
  276      | expr1 '/' term
  277      | expr1 '%' term

  278 term: prim
  279     | '+' term
  280     | '-' term
  281     | '!' term
  282     | '~' term

  283 prim: Number
  284     | Character
  285     | TagType
  286     | String
  287     | '(' expr ')'
  288     | scopedRef
  289     | FALSEX
  290     | TRUEX

  291 type: typeSpec

  292 remoteDef: REMOTE String Symbol ';'

  293 publishDef: PUBLISH Symbol ';'

  294 defSymbol: directRef

  295 directRef: Symbol
  296          | Symbol '(' ')'
  297          | Symbol '(' exprList ')'

  298 scopedRef: directRef
  299          | scopedRef '.' directRef
  300          | outerScope '.' directRef

  301 outerScope: '^'
  302           | outerScope '^'

  303 typeDef: TYPEDEF typeDeclarator ';'
  304        | structType
  305        | unionType
  306        | enumType

  307 typeDeclarator: typeSpec declarators

  308 typeSpec: simpleTypeSpec
  309         | constrTypeSpec

  310 simpleTypeSpec: baseTypeSpec
  311               | templateTypeSpec
  312               | scopedRef
  313               | KIND scopedRef

  314 baseTypeSpec: floatingPtType
  315             | integralType
  316             | charType
  317             | booleanType

  318 templateTypeSpec: sequenceType
  319                 | stringType

  320 constrTypeSpec: structType
  321               | unionType
  322               | enumType

  323 declarators: declarator
  324            | declarators ',' declarator

  325 declarator: simpleDeclarator
  326           | complexDeclarator

  327 simpleDeclarator: Symbol

  328 complexDeclarator: arrayDeclarator

  329 floatingPtType: FLOAT
  330               | DOUBLE

  331 integralType: BYTE
  332             | SHORT
  333             | INT
  334             | LONG

  335 charType: CHAR

  336 booleanType: BOOLEAN

  337 structType: STRUCT Symbol '{' memberList '}'

  338 memberList: member
  339           | memberList member

  340 member: typeSpec declarators ';'

  341 unionType: UNION Symbol SWITCH '(' switchTypeSpec ')' '{' switchBody '}'

  342 switchTypeSpec: integralType
  343               | charType
  344               | booleanType
  345               | enumType
  346               | Symbol

  347 switchBody: case
  348           | switchBody case

  349 case: caseLabels elementSpec ';'

  350 caseLabels: caseLabel
  351           | caseLabels caseLabel

  352 caseLabel: CASE expr ':'
  353          | DEFAULT ':'

  354 elementSpec: typeSpec declarator

  355 enumType: ENUM Symbol '{' commaNameList '}'

  356 sequenceType: SEQUENCE '<' simpleTypeSpec ',' Number '>'
  357             | SEQUENCE '<' simpleTypeSpec '>'

  358 stringType: STRING '<' Number '>'
  359           | STRING

  360 arrayDeclarator: Symbol fixedArraySizes

  361 fixedArraySizes: fixedArraySize
  362                | fixedArraySizes fixedArraySize

  363 fixedArraySize: '[' Number ']'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 281
    '%' (37) 277
    '&' (38) 258
    '(' (40) 63 64 65 66 125 126 137 138 139 140 141 142 144 145 287 296 297 341
    ')' (41) 63 64 65 66 125 126 137 138 139 140 141 142 144 145 287 296 297 341
    '*' (42) 153 275
    '+' (43) 272 279
    ',' (44) 62 68 78 80 210 324 356
    '-' (45) 273 280
    '.' (46) 153 299 300
    '/' (47) 276
    ':' (58) 1 2 230 248 352 353
    ';' (59) 4 5 6 35 36 37 38 40 63 64 65 66 81 94 113 117 118 119 120 121 122 150 151 152 153 154 156 175 176 180 193 195 196 206 207 208 212 223 224 230 237 292 293 303 340 349
    '<' (60) 263 356 357 358
    '=' (61) 37 115
    '>' (62) 265 356 357 358
    '?' (63) 248
    '[' (91) 69 363
    ']' (93) 69 363
    '^' (94) 256 301 302
    '{' (123) 3 7 8 76 82 84 93 95 147 149 155 157 166 179 181 197 211 213 225 236 238 337 341 355
    '|' (124) 254
    '}' (125) 3 7 8 76 82 84 93 95 155 157 166 179 181 197 211 213 225 236 238 337 341 355
    '~' (126) 282
    error (256)
    ABSTRACT (258) 48
    ATTRIBUTE (259) 35 36
    BOOLEAN (260) 336
    BYTE (261) 331
    CASE (262) 352
    CHAR (263) 335
    CLASS (264) 55
    DATA (265) 149 150
    DEFAULT (266) 353
    DELIVER (267) 175 176
    DOUBLE (268) 330
    ECLASS (269) 57
    EINTERFACE (270) 58
    ELEVATE (271) 6
    ENUM (272) 355
    EXPORT (273) 1 5 8 14
    EXTENDS (274) 42
    FACET (275) 139 140
    FALSEX (276) 289
    FILL (277)
    FINAL (278) 49 136
    FLOAT (279) 329
    FUNCTION (280) 125 126
    IMPLEMENTS (281) 43 154
    IMPORT (282) 152 153
    IMPL (283) 93 94 95 179 180 181 236 237 238
    INGREDIENT (284) 93 111 166 194
    INIT (285) 65 66 137 138 139 140 141 142 143 174
    INT (286) 333
    INTERFACE (287) 56
    KIND (288) 60 76 81 82 83 84 313
    LONG (289) 33 334
    MAKE (290) 195 196
    MAKES (291) 225 231 232
    MAP (292) 206 207 208
    METHOD (293) 144 145
    NEIGHBOR (294) 111 112 204
    NONE (295) 232
    PACKAGE (296) 151
    PNULL (297) 206
    PRESENCE (298) 112 155 177 179 224 225 246
    PRESENCEBEHAVIOR (299) 193
    PRIME (300) 137 138 223
    PRIVATE (301) 133
    PROTECTED (302) 134
    PUBLIC (303) 50 132
    PUBLISH (304) 293
    REMOTE (305) 292
    REQUIRE (306) 40
    ROLE (307)
    SEQUENCE (308) 356 357
    SHORT (309) 332
    STATE (310) 113 205
    STATIC (311) 135
    STRING (312) 358 359
    STRUCT (313) 337
    STRUCTURE (314) 155 156 157 211 212 213
    SWITCH (315) 341
    TEMPLATE (316) 197
    THROWS (317) 123
    TO (318) 175 206 207
    TRUEX (319) 290
    TYPEDEF (320) 303
    UNION (321) 341
    UNIT (322) 3 4 5 6 7 8
    UNUM (323) 178 211 236
    Character (324) 284
    CodeBlock (325) 147
    HexBlock (326) 149
    Initialization (327) 115
    Number (328) 283 356 358 363
    String (329) 150 286 292
    Symbol (330) 59 60 63 64 72 73 74 77 78 111 112 113 117 118 119 120 121 122 125 126 144 145 166 173 195 196 206 207 208 223 224 225 230 231 292 293 295 296 297 327 337 341 346 355 360
    TagType (331) 285
    Or (332) 250
    And (333) 252
    Neq (334) 261
    Eq (335) 260
    Geq (336) 266
    Leq (337) 264
    Lsl (338) 268
    Lsr (339) 269
    Asr (340) 270
    UMinus (341)
    UPlus (342)


Nonterminals, with rules where they appear

    $accept (112)
        on left: 0
    pluribusModule (113)
        on left: 1 2
        on right: 0
    unitDef (114)
        on left: 3
        on right: 1 28
    unitUse (115)
        on left: 4 5 6 7 8
        on right: 18 39
    unitElems (116)
        on left: 9 10
        on right: 3 7 8
    unitElemList (117)
        on left: 11 12
        on right: 9 12
    unitElem (118)
        on left: 13 14 15 16 17 18 19
        on right: 11 12
    definitionStatement (119)
        on left: 20 21 22 23 24 25 26 27 28 29 30
        on right: 13 14
    attributeType (120)
        on left: 31 32 33 34
        on right: 35
    attributeDef (121)
        on left: 35 36
        on right: 20
    assignment (122)
        on left: 37 38 39
        on right: 100 162 186 218 243
    requireAtt (123)
        on left: 40
        on right: 90 163 219
    codeAtt (124)
        on left: 41
        on right: 15
    codeInherit (125)
        on left: 42 43
        on right: 44 45
    codeInheritList (126)
        on left: 44 45
        on right: 45 46
    codeInherits (127)
        on left: 46 47
        on right: 41
    codeModifier (128)
        on left: 48 49 50
        on right: 51 52
    codeModifierList (129)
        on left: 51 52
        on right: 52 53
    codeModifiers (130)
        on left: 53 54
        on right: 41
    codeType (131)
        on left: 55 56 57 58
        on right: 41
    mangledSymbolElem (132)
        on left: 59 60
        on right: 61 62
    mangledSymbolList (133)
        on left: 61 62
        on right: 42 43 62
    prototypeDecl (134)
        on left: 63 64 65 66
        on right: 89
    parameterDeclList (135)
        on left: 67 68
        on right: 63 65 68 125 137 139 141 144
    arrayMarker (136)
        on left: 69
        on right: 70 71 234
    arrayMarkers (137)
        on left: 70 71
        on right: 71 72 73 117 118 120 121
    parameterDecl (138)
        on left: 72 73 74 75
        on right: 67 68
    kindDef (139)
        on left: 76
        on right: 22
    commaNameList (140)
        on left: 77 78
        on right: 78 193 194 196 246 355
    commaScopedRefList (141)
        on left: 79 80
        on right: 80 123
    kindUse (142)
        on left: 81 82
        on right: 91 101 111 112 164 171 220
    kindUseNoSemi (143)
        on left: 83 84
        on right: 224 225
    kindElems (144)
        on left: 85 86
        on right: 76 82 84
    kindElemList (145)
        on left: 87 88
        on right: 85 88
    kindElem (146)
        on left: 89 90 91 92
        on right: 87 88
    ingredientImplDef (147)
        on left: 93
        on right: 21
    ingredientImplUse (148)
        on left: 94 95
        on right: 202
    ingredientImplElems (149)
        on left: 96 97
        on right: 93 95
    ingredientImplElemList (150)
        on left: 98 99
        on right: 96 99
    ingredientImplElem (151)
        on left: 100 101 102 103 104 105 106 107 108 109 110
        on right: 98 99
    neighborAtt (152)
        on left: 111 112
        on right: 102
    stateBundleAtt (153)
        on left: 113
        on right: 103
    valueOrNot (154)
        on left: 115 116
        on right: 113 117 118 119 120 121 122
    $@1 (155)
        on left: 114
        on right: 115
    variableDecl (156)
        on left: 117 118 119 120 121 122
        on right: 104
    throwsList (157)
        on left: 123 124
        on right: 63 64 65 66 125 126 137 138 139 140 141 142 143 144 145
    functionAtt (158)
        on left: 125 126
        on right: 105
    modifiersOrNot (159)
        on left: 127 128
        on right: 125 126
    modifiers (160)
        on left: 129
        on right: 117 118 119
    modifierList (161)
        on left: 130 131
        on right: 127 129 131
    modifier (162)
        on left: 132 133 134 135 136
        on right: 130 131
    initBlockAtt (163)
        on left: 137 138 139 140 141 142 143
        on right: 107 188
    methodAtt (164)
        on left: 144 145
        on right: 106
    methodCode (165)
        on left: 147
        on right: 41 125 126 137 138 139 140 141 142 143 144 145
    $@2 (166)
        on left: 146
        on right: 147
    dataAtt (167)
        on left: 149 150
        on right: 108
    $@3 (168)
        on left: 148
        on right: 149
    packageAtt (169)
        on left: 151
        on right: 17
    importAtt (170)
        on left: 152 153
        on right: 16 109
    implementsAtt (171)
        on left: 154
        on right: 92 110 192
    presenceStructureDef (172)
        on left: 155
        on right: 24
    presenceStructureUse (173)
        on left: 156 157
        on right: 189
    presenceStructureElems (174)
        on left: 158 159
        on right: 155 157
    presenceStructureElemList (175)
        on left: 160 161
        on right: 158 161
    presenceStructureElem (176)
        on left: 162 163 164 165
        on right: 160 161
    ingredientAtt (177)
        on left: 166
        on right: 165
    ingredientAttElems (178)
        on left: 167 168
        on right: 166
    ingredientAttElemList (179)
        on left: 169 170
        on right: 167 170
    ingredientAttElem (180)
        on left: 171 172
        on right: 169 170
    deliverSym (181)
        on left: 173 174
        on right: 175 176
    deliverAtt (182)
        on left: 175 176
        on right: 172
    scope (183)
        on left: 177 178
        on right: 175 176
    presenceImplDef (184)
        on left: 179
        on right: 23
    presenceImplUse (185)
        on left: 180 181
        on right: 246
    presenceImplElems (186)
        on left: 182 183
        on right: 179 181
    presenceImplElemList (187)
        on left: 184 185
        on right: 182 185
    presenceImplElem (188)
        on left: 186 187 188 189 190 191 192
        on right: 184 185
    presenceBehavior (189)
        on left: 193
        on right: 187
    templateAtt (190)
        on left: 194
        on right: 190
    makeAtt (191)
        on left: 195 196
        on right: 191
    templateDef (192)
        on left: 197
        on right: 194
    templateElems (193)
        on left: 198 199
        on right: 197
    templateElemList (194)
        on left: 200 201
        on right: 198 201
    templateElem (195)
        on left: 202 203
        on right: 200 201
    mapScope (196)
        on left: 204 205
        on right: 206 207 208
    mapAtt (197)
        on left: 206 207 208
        on right: 203
    exprList (198)
        on left: 209 210
        on right: 210 297
    unumStructureDef (199)
        on left: 211
        on right: 30
    unumStructureUse (200)
        on left: 212 213
        on right: 244
    unumStructureElems (201)
        on left: 214 215
        on right: 211 213
    unumStructureElemList (202)
        on left: 216 217
        on right: 214 217
    unumStructureElem (203)
        on left: 218 219 220 221 222
        on right: 216 217
    primeAtt (204)
        on left: 223
        on right: 221
    presenceAtt (205)
        on left: 224 225
        on right: 222
    presenceConds (206)
        on left: 226 227
        on right: 225
    presenceCondList (207)
        on left: 228 229
        on right: 226 229
    presenceCond (208)
        on left: 230
        on right: 228 229
    makes (209)
        on left: 231 232 233
        on right: 224
    plurality (210)
        on left: 234 235
        on right: 112
    unumImplDef (211)
        on left: 236
        on right: 29
    unumImplUse (212)
        on left: 237 238
        on right: 19
    unumImplElems (213)
        on left: 239 240
        on right: 236 238
    unumImplElemList (214)
        on left: 241 242
        on right: 239 242
    unumImplElem (215)
        on left: 243 244 245
        on right: 241 242
    presenceImplAtt (216)
        on left: 246
        on right: 245
    expr (217)
        on left: 247 248
        on right: 37 40 209 210 230 248 287 352
    exprA (218)
        on left: 249 250
        on right: 247 248 250
    expr9 (219)
        on left: 251 252
        on right: 249 250 252
    expr8 (220)
        on left: 253 254
        on right: 251 252 254
    expr7 (221)
        on left: 255 256
        on right: 253 254 256
    expr6 (222)
        on left: 257 258
        on right: 255 256 258
    expr5 (223)
        on left: 259 260 261
        on right: 257 258 260 261
    expr4 (224)
        on left: 262 263 264 265 266
        on right: 259 260 261 263 264 265 266
    expr3 (225)
        on left: 267 268 269 270
        on right: 262 263 264 265 266 268 269 270
    expr2 (226)
        on left: 271 272 273
        on right: 267 268 269 270 272 273
    expr1 (227)
        on left: 274 275 276 277
        on right: 271 272 273 275 276 277
    term (228)
        on left: 278 279 280 281 282
        on right: 274 275 276 277 279 280 281 282
    prim (229)
        on left: 283 284 285 286 287 288 289 290
        on right: 278
    type (230)
        on left: 291
        on right: 72 73 74 75 117 118 119 120 121 122 125 126
    remoteDef (231)
        on left: 292
        on right: 26
    publishDef (232)
        on left: 293
        on right: 25
    defSymbol (233)
        on left: 294
        on right: 3 35 36 41 76 93 155 179 211 236
    directRef (234)
        on left: 295 296 297
        on right: 294 298 299 300
    scopedRef (235)
        on left: 298 299 300
        on right: 4 5 6 37 38 79 80 81 83 94 113 151 152 153 154 156 180 212 237 288 299 312 313
    outerScope (236)
        on left: 301 302
        on right: 300 302
    typeDef (237)
        on left: 303 304 305 306
        on right: 27
    typeDeclarator (238)
        on left: 307
        on right: 303
    typeSpec (239)
        on left: 308 309
        on right: 291 307 340 354
    simpleTypeSpec (240)
        on left: 310 311 312 313
        on right: 308 356 357
    baseTypeSpec (241)
        on left: 314 315 316 317
        on right: 310
    templateTypeSpec (242)
        on left: 318 319
        on right: 311
    constrTypeSpec (243)
        on left: 320 321 322
        on right: 309
    declarators (244)
        on left: 323 324
        on right: 307 324 340
    declarator (245)
        on left: 325 326
        on right: 323 324 354
    simpleDeclarator (246)
        on left: 327
        on right: 325
    complexDeclarator (247)
        on left: 328
        on right: 326
    floatingPtType (248)
        on left: 329 330
        on right: 314
    integralType (249)
        on left: 331 332 333 334
        on right: 315 342
    charType (250)
        on left: 335
        on right: 32 316 343
    booleanType (251)
        on left: 336
        on right: 31 317 344
    structType (252)
        on left: 337
        on right: 304 320
    memberList (253)
        on left: 338 339
        on right: 337 339
    member (254)
        on left: 340
        on right: 338 339
    unionType (255)
        on left: 341
        on right: 305 321
    switchTypeSpec (256)
        on left: 342 343 344 345 346
        on right: 341
    switchBody (257)
        on left: 347 348
        on right: 341 348
    case (258)
        on left: 349
        on right: 347 348
    caseLabels (259)
        on left: 350 351
        on right: 349 351
    caseLabel (260)
        on left: 352 353
        on right: 350 351
    elementSpec (261)
        on left: 354
        on right: 349
    enumType (262)
        on left: 355
        on right: 306 322 345
    sequenceType (263)
        on left: 356 357
        on right: 318
    stringType (264)
        on left: 358 359
        on right: 34 319
    arrayDeclarator (265)
        on left: 360
        on right: 328
    fixedArraySizes (266)
        on left: 361 362
        on right: 360 362
    fixedArraySize (267)
        on left: 363
        on right: 361 362


State 0

    0 $accept: • pluribusModule $end

    ':'  shift, and go to state 1

    pluribusModule  go to state 2


State 1

    1 pluribusModule: ':' • EXPORT unitDef
    2               | ':' •

    EXPORT  shift, and go to state 3

    $default  reduce using rule 2 (pluribusModule)


State 2

    0 $accept: pluribusModule • $end

    $end  shift, and go to state 4


State 3

    1 pluribusModule: ':' EXPORT • unitDef

    UNIT  shift, and go to state 5

    unitDef  go to state 6


State 4

    0 $accept: pluribusModule $end •

    $default  accept


State 5

    3 unitDef: UNIT • defSymbol '{' unitElems '}'

    Symbol  shift, and go to state 7

    defSymbol  go to state 8
    directRef  go to state 9


State 6

    1 pluribusModule: ':' EXPORT unitDef •

    $default  reduce using rule 1 (pluribusModule)


State 7

  295 directRef: Symbol •
  296          | Symbol • '(' ')'
  297          | Symbol • '(' exprList ')'

    '('  shift, and go to state 10

    $default  reduce using rule 295 (directRef)


State 8

    3 unitDef: UNIT defSymbol • '{' unitElems '}'

    '{'  shift, and go to state 11


State 9

  294 defSymbol: directRef •

    $default  reduce using rule 294 (defSymbol)


State 10

  296 directRef: Symbol '(' • ')'
  297          | Symbol '(' • exprList ')'

    FALSEX     shift, and go to state 12
    TRUEX      shift, and go to state 13
    Character  shift, and go to state 14
    Number     shift, and go to state 15
    String     shift, and go to state 16
    Symbol     shift, and go to state 7
    TagType    shift, and go to state 17
    '^'        shift, and go to state 18
    '+'        shift, and go to state 19
    '-'        shift, and go to state 20
    '!'        shift, and go to state 21
    '~'        shift, and go to state 22
    '('        shift, and go to state 23
    ')'        shift, and go to state 24

    exprList    go to state 25
    expr        go to state 26
    exprA       go to state 27
    expr9       go to state 28
    expr8       go to state 29
    expr7       go to state 30
    expr6       go to state 31
    expr5       go to state 32
    expr4       go to state 33
    expr3       go to state 34
    expr2       go to state 35
    expr1       go to state 36
    term        go to state 37
    prim        go to state 38
    directRef   go to state 39
    scopedRef   go to state 40
    outerScope  go to state 41


State 11

    3 unitDef: UNIT defSymbol '{' • unitElems '}'

    ABSTRACT    shift, and go to state 42
    ATTRIBUTE   shift, and go to state 43
    ELEVATE     shift, and go to state 44
    ENUM        shift, and go to state 45
    EXPORT      shift, and go to state 46
    FINAL       shift, and go to state 47
    IMPORT      shift, and go to state 48
    IMPL        shift, and go to state 49
    INGREDIENT  shift, and go to state 50
    KIND        shift, and go to state 51
    PACKAGE     shift, and go to state 52
    PRESENCE    shift, and go to state 53
    PUBLIC      shift, and go to state 54
    PUBLISH     shift, and go to state 55
    REMOTE      shift, and go to state 56
    STRUCT      shift, and go to state 57
    TYPEDEF     shift, and go to state 58
    UNION       shift, and go to state 59
    UNIT        shift, and go to state 60
    UNUM        shift, and go to state 61

    '}'       reduce using rule 10 (unitElems)
    $default  reduce using rule 54 (codeModifiers)

    unitDef               go to state 62
    unitUse               go to state 63
    unitElems             go to state 64
    unitElemList          go to state 65
    unitElem              go to state 66
    definitionStatement   go to state 67
    attributeDef          go to state 68
    codeAtt               go to state 69
    codeModifier          go to state 70
    codeModifierList      go to state 71
    codeModifiers         go to state 72
    kindDef               go to state 73
    ingredientImplDef     go to state 74
    packageAtt            go to state 75
    importAtt             go to state 76
    presenceStructureDef  go to state 77
    presenceImplDef       go to state 78
    unumStructureDef      go to state 79
    unumImplDef           go to state 80
    unumImplUse           go to state 81
    remoteDef             go to state 82
    publishDef            go to state 83
    typeDef               go to state 84
    structType            go to state 85
    unionType             go to state 86
    enumType              go to state 87


State 12

  289 prim: FALSEX •

    $default  reduce using rule 289 (prim)


State 13

  290 prim: TRUEX •

    $default  reduce using rule 290 (prim)


State 14

  284 prim: Character •

    $default  reduce using rule 284 (prim)


State 15

  283 prim: Number •

    $default  reduce using rule 283 (prim)


State 16

  286 prim: String •

    $default  reduce using rule 286 (prim)


State 17

  285 prim: TagType •

    $default  reduce using rule 285 (prim)


State 18

  301 outerScope: '^' •

    $default  reduce using rule 301 (outerScope)


State 19

  279 term: '+' • term

    FALSEX     shift, and go to state 12
    TRUEX      shift, and go to state 13
    Character  shift, and go to state 14
    Number     shift, and go to state 15
    String     shift, and go to state 16
    Symbol     shift, and go to state 7
    TagType    shift, and go to state 17
    '^'        shift, and go to state 18
    '+'        shift, and go to state 19
    '-'        shift, and go to state 20
    '!'        shift, and go to state 21
    '~'        shift, and go to state 22
    '('        shift, and go to state 23
